--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
     <h1>hello</h1>
+    <h4>hey</h4>
+    <h7>sup</h7>
+    <p>what <b>is</b> up</p>
+<a href="second.html">this is page
+    <h1>click here</h1>
+</a>
+<img src="https://media1.tenor.com/m/hgzWU3teDqYAAAAC/aww-hell.gif">
 </body>
 </html>
