--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello</title>
+    <title>Title</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <h4>hey</h4>
-    <h7>sup</h7>
-    <p>what <b>is</b> up</p>
-<a href="second.html">this is page
-    <h1>click here</h1>
-</a>
-<img src="https://media1.tenor.com/m/hgzWU3teDqYAAAAC/aww-hell.gif">
+style="background-color:powderblue;">
+<h1>Hi, Im Margot</h1>
+<p>this is my portfolio page</p>
+<a href="inex.html">this is first</a>
 </body>
 </html>
