--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-style="background-color:powderblue;">
-<h1>Hi, Im Margot</h1>
-<p>this is my portfolio page</p>
+<body style="background-color:powderblue;">
+
+<h1>Hi, Im Tomas</h1>
+<p>This is my portfolio page</p>
 <a href="inex.html">this is first</a>
 </body>
 </html>
