--- a/inex.html
+++ b/inex.html
@@ -7,11 +7,24 @@
 <body>
     <h1>hello</h1>
     <h4>hey</h4>
-    <h7>sup</h7>
+    <h6>sup</h6>
     <p>what <b>is</b> up</p>
 <a href="second.html">this is page
     <h1>click here</h1>
 </a>
 <img src="https://media1.tenor.com/m/hgzWU3teDqYAAAAC/aww-hell.gif">
+
+
+<ol type="A">
+    <li>list item 1
+    <ol>
+        <li>sub</li>
+    </ol>
+    </li>
+
+    <li>list item 2</li>
+    <li>list item 3</li>
+</ol>
+
 </body>
 </html>
