--- a/inex.html
+++ b/inex.html
@@ -12,7 +12,7 @@
 <a href="second.html">this is page
     <h1>click here</h1>
 </a>
-<img src="https://media1.tenor.com/m/hgzWU3teDqYAAAAC/aww-hell.gif">
+<img src="https://media1.tenor.com/m/hgzWU3teDqYAAAAC/aww-hell.gif" alt="aw hell nahh">
 
 
 <ol type="A">
