--- a/inex.html
+++ b/inex.html
@@ -17,14 +17,27 @@
 
 <ol type="A">
     <li>list item 1
-    <ol>
+    <ul>
         <li>sub</li>
-    </ol>
+    </ul>
     </li>
 
     <li>list item 2</li>
     <li>list item 3</li>
 </ol>
-
+<table>
+    <tr>
+        <th>name</th>
+        <th>age</th>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>30</td>
+    </tr>
+    <tr>
+        <td>Mary</td>
+        <td>30</td>
+    </tr>
+</table>
 </body>
 </html>
