--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sandwich</title>
 </head>
-<body>
+<body style="background-color:#db7d7d;">
 <h1>How To Make a PB & J Sandwich</h1>
 <p>I will be teaching you how to make the highest quality PB & J sandwich</p>
 <img src="https://static01.nyt.com/images/2024/09/27/multimedia/AS-Griddled-PBJ-qljg/AS-Griddled-PBJ-qljg-jumbo.jpg" width="200" alt="pb and j">
