--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Hi, Im Tomas</h1>
 <p>This is my portfolio page</p>
-<a href="inex.html">this is first</a>
+<a href="inex.html">this is first<br></a>
 <a href="Recipe/index.html">this is second</a>
 </body>
 </html>
