--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:powderblue;">
 
-<h1>Hi, Im Tomas</h1>
+<h1 style="text-align: center;">Hi, Im Tomas</h1>
 <p>This is my portfolio page</p>
 <a href="inex.html">this is first<br></a>
 <a href="Recipe/index.html">this is second</a>
