--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> PB & J Sandwich</title>
+    <title> Sandwich</title>
 </head>
 <body style="background-color:#db7d7d;">
 <h1 style="text-align: center;" >How To Make a PB & J Sandwich</h1>
