--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
 <h1 style="text-align: center;">Hi, Im Tomas</h1>
 <p>This is my portfolio page</p>
+
+    <label for="cars">Choose a number:</label>
+    <select name="cars" id="cars">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+    </select>
+<a><br></a>
 <a href="inex.html">this is first<br></a>
 <a href="Recipe/index.html">this is second</a>
 </body>
