--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:powderblue;">
 
-<h1 style="text-align: center;">Hi, Im Tomas</h1>
+<marquee><h1 style="text-align: center;">Hi, Im Tomas</h1></marquee>
 <p>This is my portfolio page</p>
 
     <label for="cars">Choose a number:</label>
