--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body style="background-color:powderblue;">
 
-<marquee><h1 style="text-align: center;">Hi, Im Tomas</h1></marquee>
+<h1 style="text-align: center;">Hi, Im Tomas</h1>
 <p>This is my portfolio page</p>
 
-    <label for="cars">Choose a number:</label>
-    <select name="cars" id="cars">
+    <label for="number">Choose a number:</label>
+    <select name="number" id="number">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
