--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body style="background-color:powderblue;">
 
-<h1 style="text-align: center;">Hi, Im Tomas</h1>
-<p>This is my portfolio page</p>
+<h1 style="text-align: center ;color: darkred">Hi, Im Tomas</h1>
+<p style="color:#9f56e4 "> This is my portfolio page</p>
 
     <label for="number">Choose a number:</label>
     <select name="number" id="number">
