--- a/inex.html
+++ b/inex.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>hello</h1>
-    <h4>hey</h4>
-    <h6>sup</h6>
+    <h4 class ="green">hey</h4>
+    <h4>hello world</h4>
+    <h6 class ="green">sup</h6>
     <p>what <b>is</b> up</p>
 <a href="second.html">this is page
     <h1>click here</h1>
@@ -36,8 +37,17 @@
     </tr>
     <tr>
         <td>Mary</td>
-        <td>30</td>
+
     </tr>
 </table>
 </body>
+<style>
+
+    h4 {
+        color: #e6715c;
+    }
+{
+    color: #d8b74e;
+}
+</style>
 </html>
