--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="background-color:powderblue;">
 
 <h1 style="text-align: center ;color: darkred">Hi, Im Tomas</h1>
-<p style="color:#9f56e4 "> This is my portfolio page</p>
+<p style="color:#b477ed; font-family: 'Comic Sans MS'"> This is my portfolio page</p>
 
     <label for="number">Choose a number:</label>
     <select name="number" id="number">
@@ -20,4 +20,9 @@
 <a href="inex.html">this is first<br></a>
 <a href="Recipe/index.html">this is second</a>
 </body>
+
+
+<style>
+
+</style>
 </html>
