--- a/grid/indexgrid.html
+++ b/grid/indexgrid.html
@@ -14,7 +14,7 @@
             padding: 5px;
         }
         .container div {
-            background-color: white;
+            background-color: #ffffff;
             padding: 10px;
         }
         .container div.header {
@@ -29,25 +29,29 @@
         }
         .container div.footer {
             grid-area: footer;
-            text-align: center;
         }
     </style>
 </head>
-<body>
-
-<h1>CSS Grid Layout</h1>
-
-<p>The Grid Layout Module offers a grid-based layout system, with rows and columns.</p>
-<p>The Grid Layout Module makes it easy to design complex and responsive web pages without using floats and positioning:</p>
-
-<div class="container">
-    <div class="header"><h2>My Header</h2></div>
-    <div class="menu"><a href="#">Link 1</a><br><a href="#">Link 2</a><br><a href="#">Link 3</a></div>
-    <div class="content"><h3>Lorem Ipsum</h3><p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisl laoreet facilisis aliquet. Potenti dignissim litora eget montes rhoncus sapien neque urna. Cursus libero sapien integer magnis ligula lobortis quam ut.</p></div>
-    <div class="footer"><h4>Footer</h4></div>
+<body class="container">
+<div class="header">
+    <h2>Bladee</h2>
 </div>
-
+<div class="menu">
+    <h3>Discography</h3>
+    <p>Eversince</p>
+    <p>Gluee</p>
+    <p>Icedancer</p>
+    <p>The Fool</p>
+    <p>Crest</p>
+    <p>Spiderr</p>
+</div>
+<div class="content">
+    <h3>Bio</h3>
+    <p>Bladee (Benjamin Reichwald) is a Swedish rapper and singer born in 1994. A founding member of the collective Drain Gang alongside Ecco2k, Whitearmor, and Thaiboy Digital, he is one of the pioneers of the underground internet rap scene. Known for his ethereal, melancholic sound and abstract lyrics, Bladee has released numerous projects since 2014 and built a devoted global fanbase.</p>
+</div>
+<div class="footer">
+    <h4>Favourite Songs</h4>
+    <p>Psycho &nbsp;|&nbsp; Expression on Your Face &nbsp;|&nbsp; Hennessey and Sailor Moon</p>
+</div>
 </body>
 </html>
-
-
