--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a><br></a>
 <a href="inex.html">this is first<br></a>
 <a href="Recipe/index.html">this is second</a>
-<a href="indexgrid.html">this is third</a>
+<a href="grid/gridmain.html">this is third</a>
 </body>
 
 
